Fix horizontal links layout bug.

--- a/about/about3.css
+++ b/about/about3.css
@@ -1,3 +1,7 @@
+header {
+  /* display: none !important; */
+}
+
 #row1 {
   /* display: none; */
 }
